Change site title from 'Site Title' to 'EIS Demo'

--- a/content/_app.mdx
+++ b/content/_app.mdx
@@ -4,7 +4,7 @@ import {CanopyHeader, CanopyFooter} from "@canopy-iiif/app/ui";
 export function Head() {
   return (
     <>
-      <Meta siteTitle="Site Title" />
+      <Meta siteTitle="EIS Demo" />
       <Stylesheet />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link
@@ -28,7 +28,7 @@ export function App({children}) {
           {href: "/search", label: "Works"},
           {href: "/about", label: "About"},
         ]}
-        title="Site Title"
+        title="EIS Demo"
         logo={Logo}
       />
       <main>{children}</main>
