Update title in Jai's index.mdx

--- a/content/Jai/index.mdx
+++ b/content/Jai/index.mdx
@@ -10,7 +10,7 @@ referencedManifests:
 
 import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
-# About
+# Jai's page B)
 
 Using [IIIF Presentation Collection(s)](https://iiif.io/api/presentation/3.0/#overview-collection) as a data source, Canopy IIIF (Canopy) generates a scholarly digital projects platform that transforms provided digital collections into an accessible, discoverable research environment. Built on modern web standards and leveraging the interoperability of IIIF, Canopy creates static sites that extend existing IIIF resources while providing advanced localized search capabilities, contextual navigation, and customizable presentation layers.
 
