Add navigation link for 'Jai' in header

--- a/content/_app.mdx
+++ b/content/_app.mdx
@@ -27,6 +27,7 @@ export function App({children}) {
         navigation={[
           {href: "/search", label: "Works"},
           {href: "/about", label: "About"},
+          {href: "/Jai", label: "Jai"},
         ]}
         title="EIS Demo"
         logo={Logo}
