--- a/content/_app.mdx
+++ b/content/_app.mdx
@@ -28,6 +28,7 @@ export function App({children}) {
           {href: "/search", label: "Works"},
           {href: "/about", label: "About"},
           {href: "/Jai", label: "Jai"},
+          {href: "/cat", label: "cat"},
         ]}
         title="EIS Demo"
         logo={Logo}
