Create Bea path

--- a/content/_app.mdx
+++ b/content/_app.mdx
@@ -29,6 +29,7 @@ export function App({children}) {
           {href: "/about", label: "About"},
           {href: "/Jai", label: "Jai"},
           {href: "/cat", label: "cat"},
+          {href: "/Bea", label: "Bea"},
         ]}
         title="EIS Demo"
         logo={Logo}
