--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: About
+title: Bea's page
 description: Canopy IIIF makes easy the creation of digital projects for libraries, archives, and museums. Created by Mat Jordan and Mark Baggett.
 image: https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5/950,520,7100,4740/!1200,630/0/default.jpg
 referencedManifests:
@@ -10,18 +10,9 @@ referencedManifests:
 
 import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
-# About
+# Loring Park, Minnesota
 
-Using [IIIF Presentation Collection(s)](https://iiif.io/api/presentation/3.0/#overview-collection) as a data source, Canopy IIIF (Canopy) generates a scholarly digital projects platform that transforms provided digital collections into an accessible, discoverable research environment. Built on modern web standards and leveraging the interoperability of IIIF, Canopy creates static sites that extend existing IIIF resources while providing advanced localized search capabilities, contextual navigation, and customizable presentation layers.
-
-<ButtonWrapper variant="interstitial" text="Have an idea for a project?">
-  <Button href="/about/get-started" label="Get started" />
-  <Button
-    href="https://canopy-iiif.github.io/app/docs/"
-    label="Read documentation"
-    variant="secondary"
-  />
-</ButtonWrapper>
+Text, somewhere, sometime!
 
 ## Overview
 
