--- a/content/_app.mdx
+++ b/content/_app.mdx
@@ -30,6 +30,7 @@ export function App({children}) {
           {href: "/Jai", label: "Jai"},
           {href: "/cat", label: "cat"},
           {href: "/Bea", label: "Bea"},
+          {href: "/liana", label: "Liana"},
         ]}
         title="EIS Demo"
         logo={Logo}
