--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -19,7 +19,7 @@ Picture two source IIIF collections with digitized items relating to a famous au
 Comprehensive [documentation](https://canopy-iiif.github.io/app/docs/) is integrated into the application and serves as both a development guide and a demonstration of Canopy's potential for digital scholarship and humanities projects. To highlight what Canopy can do, this paragraph is authored in markdown from [a simple text file](https://github.com/canopy-iiif/template/blob/main/content/about/index.mdx?plain=1) and below is an example of an `<Image>` component rendering a IIIF image resource along with an inline annotation and caption. This same image is provided by Northwestern University Libraries as a [IIIF Manifest](https://api.dc.library.northwestern.edu/api/v2/works/2b36982f-0ab3-43ef-a590-c2144b815bf9?as=iiif) from their [Digital Collections platform](https://dc.library.northwestern.edu/items/4bdb5a22-6c7f-498d-8e6e-e49ea9bc4778) and [aggregated into this project](https://canopy-iiif.github.io/app/works/the-town-and-pass-of-boondi-in-rajpootana.html) as a static page during the Canopy build process.
 
 <Image
-  src="https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5"
+  src="https://iiif.dc.library.northwestern.edu/iiif/3/0d1d28b9-d0d9-4e47-b55c-b1c48c754dc6/full/3000,/0/default.jpg"
   isTiledImage={true}
   height="500px"
   alt="Painting of the The town & pass of Boondi, in Rajpootana"
