--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bea's page
-description: Canopy IIIF makes easy the creation of digital projects for libraries, archives, and museums. Created by Mat Jordan and Mark Baggett.
-image: https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5/950,520,7100,4740/!1200,630/0/default.jpg
+description: Bea's take on a Loring Park, MN EIS!
+image: https://iiif.dc.library.northwestern.edu/iiif/3/0d1d28b9-d0d9-4e47-b55c-b1c48c754dc6/full/3000,/0/default.jpg
 referencedManifests:
   - https://api.dc.library.northwestern.edu/api/v2/works/2b36982f-0ab3-43ef-a590-c2144b815bf9?as=iiif
 ---
