--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -12,7 +12,7 @@ import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
 The Loring Park Development will provide a major new residential complex within very convenient access to the full range of urban services and ameneties. It also will create a major new hotel/convention center, and will provide coherence of design to the nine-block project area. The major environmental costs of the development will be the substantial demolition of existing business and residential structures, with the attendant displacement of the indigenous population; the vacation of streets for the greenway construction, which will result in increased traffic congestion and air/noise pollution problems; creation of short-term noise, dust and disruption of pedestrian and vehicular traffic associated with construction activities; erection of tall and massive structures which create the potential for adverse shadow and wind effects; and concentration of the population with attendant increases in demand for local and urban facilities and services.
 
-## Overview
+## Involved Agencies
 
 Picture two source IIIF collections with digitized items relating to a famous author: **Collection A** providing _70 manifests_ and **Collection B** contributing _35 more_. A team is tasked with building out a unified digital project for these items that allows users to browse their content, as well as interact with contextual essays, timelines, and maps. By using Canopy, implementers can quickly stand-up a working project with every manifest becoming its own work page, authored Markdown files providing context, and both streams feeding a shared search index before everything is written out to static HTML, CSS, and data assets. The diagram below walks through that pipeline so you can see how these raw manifests become a ready-to-host digital project.
 
@@ -54,8 +54,6 @@ Comprehensive [documentation](https://canopy-iiif.github.io/app/docs/) is integr
       ]}
 
 />
-
-As authors create content using Markdown, they can reference the source material directly within the text using the `<ReferencedItems />` component below. This component dynamically generates a list of all IIIF Manifests that have been explicitly referenced within the markdown content of the page.
 
 <ReferencedItems />
 
