--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -14,11 +14,11 @@ import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
 The Loring Park Development will provide a **major new residential complex** within very convenient access to the full range of urban services and ameneties. It also will create a major new hotel/convention center, and will provide coherence of design to the nine-block project area. The major environmental costs of the development will be the **substantial demolition of existing business and residential structures,** with the attendant **displacement of the indigenous population;** the vacation of streets for the greenway construction, which will result in increased traffic congestion and air/noise pollution problems; creation of short-term noise, dust and disruption of pedestrian and vehicular traffic associated with construction activities; erection of tall and massive structures which create the potential for adverse shadow and wind effects; and concentration of the population with attendant increases in demand for local and urban facilities and services.
 
-## Involved Agencies
+## Description of the proposed action
 
-Picture two source IIIF collections with digitized items relating to a famous author: **Collection A** providing _70 manifests_ and **Collection B** contributing _35 more_. A team is tasked with building out a unified digital project for these items that allows users to browse their content, as well as interact with contextual essays, timelines, and maps. By using Canopy, implementers can quickly stand-up a working project with every manifest becoming its own work page, authored Markdown files providing context, and both streams feeding a shared search index before everything is written out to static HTML, CSS, and data assets. The diagram below walks through that pipeline so you can see how these raw manifests become a ready-to-host digital project.
+Sample [hyperlink](https://google.com) is here.
 
-Comprehensive [documentation](https://canopy-iiif.github.io/app/docs/) is integrated into the application and serves as both a development guide and a demonstration of Canopy's potential for digital scholarship and humanities projects. To highlight what Canopy can do, this paragraph is authored in markdown from [a simple text file](https://github.com/canopy-iiif/template/blob/main/content/about/index.mdx?plain=1) and below is an example of an `<Image>` component rendering a IIIF image resource along with an inline annotation and caption. This same image is provided by Northwestern University Libraries as a [IIIF Manifest](https://api.dc.library.northwestern.edu/api/v2/works/2b36982f-0ab3-43ef-a590-c2144b815bf9?as=iiif) from their [Digital Collections platform](https://dc.library.northwestern.edu/items/4bdb5a22-6c7f-498d-8e6e-e49ea9bc4778) and [aggregated into this project](https://canopy-iiif.github.io/app/works/the-town-and-pass-of-boondi-in-rajpootana.html) as a static page during the Canopy build process.
+# Involved Agencies
 
 ### Part I. 
 "Since the proposed project has already entailed substantial demolition of indigenous structures (about 46 buildings, or approximately 70% of the entire demolition workload, has already been completed), a description of the neighborhood that is giving way to this development will be described in some detail," 
@@ -31,8 +31,4 @@ Comprehensive [documentation](https://canopy-iiif.github.io/app/docs/) is integr
 
 <ReferencedItems />
 
-## Colophon
-
-Canopy was created by [Mat Jordan](https://github.com/mathewjordan) _(Northwestern University)_ and [Mark Baggett](https://github.com/markpbaggett) _(Texas A&M University)_ as a method to quickly build exhibit style digital humanities projects that extend existing digital collections using IIIF Collections and Manifests. It continues to be an active open-source initiative of [Northwestern University Libraries](https://www.library.northwestern.edu/), where it supports digital scholarship in many forms. This example site is built from the [Donald K. Adams and Lawrence D. Stewart Collection of Prints](https://dc.library.northwestern.edu/collections/94536627-cfdf-413c-852b-0cb16d986da3) and the [Indian Paintings on Mica](https://dc.library.northwestern.edu/collections/7ac5769f-a1d9-4227-a350-bf8bd8b1cddc) collection hosted by Northwestern University Libraries' [Digital Collections](https://dc.library.northwestern.edu/).
-
-Canopy uses the [IIIF Presentation API](https://iiif.io/api/presentation/3.0/) to deliver rich media from providing institutions, [Markdown as MDX](https://mdxjs.com/) for authoring contextual content and layout, [TailwindCSS](https://tailwindcss.com/) for the user interface, and a static [FlexSearch](https://github.com/nextapps-de/flexsearch) index for search. Easy aggregation and retrieval of IIIF resources is made possible by the [IIIF helpers](https://github.com/IIIF-Commons/iiif-helpers) developed by [Stephen Fraser](https://github.com/stephenwf). In addition, [Clover IIIF](https://github.com/samvera-labs/clover-iiif), developed by Northwestern University Libraries with contributions from other institutions, is integral to Canopy and provides the rendering of IIIF resources, annotations, and metadata throughout the interface.
+## Public Comment
