--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -8,9 +8,13 @@ referencedManifests:
 
 import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
+# Loring 100 Apartments
+## Loring Park Development District
+### Minneapolis, Minnesota
+
 <iframe src="https://dc.library.northwestern.edu/embedded-viewer/https%3A%2F%2Fapi.dc.library.northwestern.edu%2Fapi%2Fv2%2Fworks%2F2b36982f-0ab3-43ef-a590-c2144b815bf9%3Fas%3Diiif" title="Loring Park Development District, Loring 100 apartments : environmental impact statement." width="100%" height="800"></iframe>
 
-# Loring Park, Minnesota
+## Loring Park, Minnesota
 
 The Loring Park Development will provide a **major new residential complex** within very convenient access to the full range of urban services and ameneties. It also will create a major new hotel/convention center, and will provide coherence of design to the nine-block project area. The major environmental costs of the development will be the **substantial demolition of existing business and residential structures,** with the attendant **displacement of the indigenous population;** the vacation of streets for the greenway construction, which will result in increased traffic congestion and air/noise pollution problems; creation of short-term noise, dust and disruption of pedestrian and vehicular traffic associated with construction activities; erection of tall and massive structures which create the potential for adverse shadow and wind effects; and concentration of the population with attendant increases in demand for local and urban facilities and services.
 
@@ -18,7 +22,7 @@ The Loring Park Development will provide a **major new residential complex** wit
 
 Sample [hyperlink](https://google.com) is here.
 
-# Involved Agencies
+## Involved Agencies
 
 ### Part I. 
 "Since the proposed project has already entailed substantial demolition of indigenous structures (about 46 buildings, or approximately 70% of the entire demolition workload, has already been completed), a description of the neighborhood that is giving way to this development will be described in some detail," 
