--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -16,7 +16,7 @@ import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
 ## Loring Park, Minnesota
 
-The Loring Park Development will provide a **major new residential complex** within very convenient access to the full range of urban services and ameneties. It also will create a major new hotel/convention center, and will provide coherence of design to the nine-block project area. The major environmental costs of the development will be the **substantial demolition of existing business and residential structures,** with the attendant **displacement of the indigenous population;** the vacation of streets for the greenway construction, which will result in increased traffic congestion and air/noise pollution problems; creation of short-term noise, dust and disruption of pedestrian and vehicular traffic associated with construction activities; erection of tall and massive structures which create the potential for adverse shadow and wind effects; and concentration of the population with attendant increases in demand for local and urban facilities and services.
+The Loring Park Development will provide a **major new residential complex** within very convenient access to the full range of urban services and ameneties. It also will create a major new hotel/convention center, and will provide coherence of design to the nine-block project area. The major environmental costs of the development will be the **substantial demolition of existing business and residential structures,** with the attendant **displacement of the indigenous population;** the vacation of streets for the greenway construction, which will result in increased traffic congestion and air/noise pollution problems; creation of short-term noise, dust and disruption of pedestrian and vehicular traffic associated with construction activities; erection of tall and massive structures which create the potential for adverse shadow and wind effects; and concentration of the population with attendant increases in demand for local and urban facilities and services. 
 
 ## Description of the proposed action
 
@@ -27,12 +27,17 @@ Sample [hyperlink](https://google.com) is here.
 ### Part I. 
 "Since the proposed project has already entailed substantial demolition of indigenous structures (about 46 buildings, or approximately 70% of the entire demolition workload, has already been completed), a description of the neighborhood that is giving way to this development will be described in some detail," 
 
+By the 1970s, the Minnesotan Indigenous population had risen to TKTK[^1]%. The tribes of the Ojibwe, Potawatomi, Miami and Hochunk nations were all present.
+ 
+[^1]: TK Author, _Sample Source_, TK.
+
 <Image
   src="https://iiif.dc.library.northwestern.edu/iiif/3/0d1d28b9-d0d9-4e47-b55c-b1c48c754dc6/full/3000,/0/default.jpg"
   isTiledImage={true}
   height="500px"
 />
 
+<Bibliography />
 <ReferencedItems />
 
 ## Public Comment
