--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -20,7 +20,7 @@ The Loring Park Development will provide a **major new residential complex** wit
 
 ## Description of the proposed action
 
-Sample [hyperlink](https://google.com) is here.
+Sample [hyperlink](https://google.com) is here. The <abbr title="Environmental Impact Statement">EIS</abbr> was required before approval.
 
 ## Involved Agencies
 
