--- a/content/Bea/index.mdx
+++ b/content/Bea/index.mdx
@@ -37,7 +37,7 @@ By the 1970s, the Minnesotan Indigenous population had risen to TKTK[^1]%. The t
   height="500px"
 />
 
-<Bibliography />
-<ReferencedItems />
+{* <Bibliography /> *}
+{* <ReferencedItems /> *}
 
 ## Public Comment
