hana edit page & link

--- a/content/_app.mdx
+++ b/content/_app.mdx
@@ -28,7 +28,7 @@ export function App({children}) {
           {href: "/search", label: "Works"},
           {href: "/about", label: "About"},
           {href: "/Jai", label: "Jai"},
-          {href: "/cat", label: "cat"},
+          {href: "/hana", label: "Hana"},
           {href: "/Bea", label: "Bea"},
           {href: "/liana", label: "Liana"},
         ]}
