--- a/content/hana/index.mdx
+++ b/content/hana/index.mdx
@@ -17,6 +17,11 @@ Content
 ![imagetest](https://images.ctfassets.net/ub3bwfd53mwy/5zi8myLobtihb1cWl3tj8L/45a40e66765f26beddf7eeee29f74723/6_Image.jpg)
 
 <Image
+  src="https://images.ctfassets.net/ub3bwfd53mwy/5zi8myLobtihb1cWl3tj8L/45a40e66765f26beddf7eeee29f74723/6_Image.jpg?w=750"
+  height="500px"
+  caption="cats for tests"
+/>
+<Image
   src="https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5"
   isTiledImage={true}
   height="500px"
