--- a/content/hana/index.mdx
+++ b/content/hana/index.mdx
@@ -4,17 +4,24 @@ description: Canopy IIIF makes easy the creation of digital projects for librari
 image: https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5/950,520,7100,4740/!1200,630/0/default.jpg
 referencedManifests:
 ---
-# Title
+# Loring 100 Apartments
 
-Content
+On June 3, 1971, the Minnesota State Legislature enacted legislation enabling the establishment of the Loring Park Development District. The act authorized the City of Minneapolis to carry out, through specified districts, redevelopment activities to be funded by the tax increment method.1 The Loring Park Development District, which contains nine city blocks, was shown in Figure 1 (p.xii). Its boundaries were designated by the City Council in June, 1972. Administrative responsibility for the District rests with the City Coordinator's office.
 
-## Subtitle
+By late 1973, the Loring Park Development Urban Design Plan had been developed and published by M. Paul Friedberg and Associates, and Barton-Aschman Associates, Inc. This comprehensive plan has been used by the City Council in its continuing implementation of the project.
 
-Content
+On July 29, 1974, Mr. Robert Purcell, Director of Loring Park Development, filed Loring Park Development, an Environmental Assessment with the Minnesota Environmental Quality Council (MEQC). The assessment included the District, the Mall extension, and the pedestrian-bicycle link (see Appendix I for a description of these). MEQC accepted the assessment's recommendation that no State of Minnesota EIS be prepared, and implementation of the program continued.
+
+Concurrently, however, the City was planning an elderly housing project for the Loring Park area. A citizens group chose the site at 15th Street and 1st Avenue South - a location one block south of the Loring Park Development District, but closely related to the total area development, in that the project was in part conceived as a means to house displacees from the Loring Park Development District proper.
+
+## Figures
+
+Figure1 xii
 
 [link](https://example.com/)
 
-![imagetest](https://images.ctfassets.net/ub3bwfd53mwy/5zi8myLobtihb1cWl3tj8L/45a40e66765f26beddf7eeee29f74723/6_Image.jpg)
+![imagetest]
+(https://drive.google.com/uc?export=view&id=1D8pU3Z99Yk9AtrrSC5JI9IFvovP5TWlF)
 
 <Image
   src="https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5"
