--- a/content/hana/index.mdx
+++ b/content/hana/index.mdx
@@ -14,14 +14,14 @@ On July 29, 1974, Mr. Robert Purcell, Director of Loring Park Development, filed
 
 Concurrently, however, the City was planning an elderly housing project for the Loring Park area. A citizens group chose the site at 15th Street and 1st Avenue South - a location one block south of the Loring Park Development District, but closely related to the total area development, in that the project was in part conceived as a means to house displacees from the Loring Park Development District proper.
 
-## Figures
+## Subtitle here
 
-Figure1 xii
+Content here
 
-[link](https://example.com/)
+[link here](https://example.com/)
 
-![imagetest]
-()
+![image here]
+(https://www.nationwidehousingcorporation.com/wp-content/uploads/2019/02/Loring-1.jpg)
 
 <Image
   src="https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5"
