--- a/content/index.mdx
+++ b/content/index.mdx
@@ -35,6 +35,10 @@ Canopy IIIF is an open-source static site generator designed for IIIF collection
 - Update `content/_app.mdx` to adjust site-wide structure.
 - Browse the component catalog and usage patterns in the docs to extend the narrative beyond default manifests.
 
+<Image
+  src="https://iiif.dc.library.northwestern.edu/iiif/3/ac3a5c6d-695a-4806-b7e0-9f22b5dab7ab/full/3000,/0/default.jpg"
+/>
+
 <RelatedItems top={7} />
 
 </Container>
