--- a/content/index.mdx
+++ b/content/index.mdx
@@ -39,6 +39,8 @@ Canopy IIIF is an open-source static site generator designed for IIIF collection
   src="https://iiif.dc.library.northwestern.edu/iiif/3/ac3a5c6d-695a-4806-b7e0-9f22b5dab7ab/full/3000,/0/default.jpg"
 />
 
+<Scroll iiifContent="https://iiif.dc.library.northwestern.edu/iiif/3/a4a1fa63-47f9-45bd-96b2-04b2e3afd010/info.json" />
+
 <RelatedItems top={7} />
 
 </Container>
