--- a/content/index.mdx
+++ b/content/index.mdx
@@ -40,6 +40,7 @@ Canopy IIIF is an open-source static site generator designed for IIIF collection
 />
 
 <Scroll iiifContent="https://iiif.dc.library.northwestern.edu/iiif/3/a4a1fa63-47f9-45bd-96b2-04b2e3afd010/info.json" />
+<Scroll iiifContent="https://iiif.dc.library.northwestern.edu/iiif/3/a4a1fa63-47f9-45bd-96b2-04b2e3afd010/info.json" />
 
 <RelatedItems top={7} />
 
