--- a/content/index.mdx
+++ b/content/index.mdx
@@ -40,7 +40,7 @@ Canopy IIIF is an open-source static site generator designed for IIIF collection
 />
 
 <Scroll iiifContent="https://iiif.dc.library.northwestern.edu/iiif/3/a4a1fa63-47f9-45bd-96b2-04b2e3afd010/info.json" />
-<Scroll iiifContent="https://iiif.dc.library.northwestern.edu/iiif/3/a4a1fa63-47f9-45bd-96b2-04b2e3afd010/info.json" />
+<Scroll iiifContent="https://api.dc.library.northwestern.edu/api/v2/works/30f79b05-3b6d-43a3-87a8-f3f2ac20e6a4?as=iiif" />
 
 <RelatedItems top={7} />
 
