--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -15,3 +15,5 @@
 <Image
   src="https://iiif.dc.library.northwestern.edu/iiif/3/ac3a5c6d-695a-4806-b7e0-9f22b5dab7ab/full/3000,/0/default.jpg"
 />
+
+</Container>
