--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -3,7 +3,18 @@
   description="Today, Loring Park neighborhood is a thriving area of Minneapolis."
   background="theme"
   random={true}
-  
+  links={[
+    {
+      href: "/about/get-started",
+      title: "sample 1",
+      type: "primary",
+    },
+    {
+      href: "https://canopy-iiif.github.io/app/docs/",
+      title: "sample 2",
+      type: "secondary",
+    },
+  ]}
 />
 
 <Container>
