--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -21,7 +21,13 @@
 
 ## Demographics 
 
-1, 2, 3
+population in 1970 (incl. areas not subject to redevelopment) was 1387 (from EIS document)
+
+in re-developable portion of the district was about 1000
+
+population in 1960 was 1968 (from EIS document)
+
+2020 population: 9,718 (source: Wikipedia)
 
 <Image
   src="https://iiif.dc.library.northwestern.edu/iiif/3/ac3a5c6d-695a-4806-b7e0-9f22b5dab7ab/full/3000,/0/default.jpg"
