--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -65,3 +65,7 @@ population in 1960 was 1968 (from EIS document)
 )}
 
 </Container>
+
+<Container>
+<iframe frameborder="0" class="juxtapose" width="100%" height="null" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=d4989f5e-fd4f-11f0-ba1b-0e6f42328d7d"></iframe>
+</Container>
