--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -33,39 +33,47 @@ population in 1960 was 1968 (from EIS document)
   src="https://iiif.dc.library.northwestern.edu/iiif/3/ac3a5c6d-695a-4806-b7e0-9f22b5dab7ab/full/3000,/0/default.jpg"
 />
 
-<div id="scroll-chart" className="space-y-4 max-w-2xl my-8">
-  <div className="relative h-8 bg-gray-200 rounded overflow-hidden">
-    <div className="bar-fill h-full bg-blue-600 w-0 transition-all duration-1000" data-target="85%"></div>
-    <span className="absolute inset-y-0 left-2 flex items-center text-xs font-bold text-black">Category A</span>
-  </div>
-  <div className="relative h-8 bg-gray-200 rounded overflow-hidden">
-    <div className="bar-fill h-full bg-blue-600 w-0 transition-all duration-1000" data-target="60%"></div>
-    <span className="absolute inset-y-0 left-2 flex items-center text-xs font-bold text-black">Category B</span>
+
+<div className="my-10 max-w-2xl">
+  <style>{`
+    @keyframes grow {
+      from { width: 0%; }
+      to { width: var(--final-width); }
+    }
+    .animate-bar {
+      animation: grow 2s ease-out forwards;
+    }
+  `}</style>
+
+  <h3 className="text-2xl font-bold mb-6">Demographics</h3>
+
+  <div className="space-y-4">
+    {/* Bar 1 */}
+    <div className="relative h-10 bg-gray-200 rounded">
+      <div 
+        className="animate-bar h-full bg-blue-600 rounded" 
+        style={{ '--final-width': '85%', width: '0%' }}
+      ></div>
+      <span className="absolute inset-y-0 left-2 flex items-center text-sm font-bold text-white">
+        Category A (85%)
+      </span>
+    </div>
+
+    {/* Bar 2 */}
+    <div className="relative h-10 bg-gray-200 rounded">
+      <div 
+        className="animate-bar h-full bg-blue-600 rounded" 
+        style={{ '--final-width': '60%', width: '0%' }}
+      ></div>
+      <span className="absolute inset-y-0 left-2 flex items-center text-sm font-bold text-white">
+        Category B (60%)
+      </span>
+    </div>
   </div>
 </div>
 
-{/* MDX-Safe Trigger */}
-{typeof window !== 'undefined' && (
-  <script dangerouslySetInnerHTML={{ __html: `
-    (function() {
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.querySelectorAll('.bar-fill').forEach(bar => {
-              bar.style.width = bar.getAttribute('data-target');
-            });
-          }
-        });
-      }, { threshold: 0.1 });
-
-      const target = document.querySelector('#scroll-chart');
-      if (target) observer.observe(target);
-    })();
-  `}} />
-)}
-
-</Container>
-
-<Container>
 <iframe frameborder="0" class="juxtapose" width="100%" height="null" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=d4989f5e-fd4f-11f0-ba1b-0e6f42328d7d"></iframe>
+
+
+
 </Container>
