--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -1,21 +1,9 @@
 <Interstitials.Hero
-  headline="Loring Park neighborhood today"
-  description="Today, Loring Park neighborhood is a thriving area of Minneapolis."
-  background="theme"
-  random={true}
-  links={[
-    {
-      href: "/about/get-started",
-      title: "sample 1",
-      type: "primary",
-    },
-    {
-      href: "https://canopy-iiif.github.io/app/docs/",
-      title: "sample 2",
-      type: "secondary",
-    },
-  ]}
+  headline="Plan your visit"
+  description="Preview your favorites, bookmark upcoming tours, and read the latest from the archives."
+  links={[{ title: 'Browse works', href: '/works' }]}
 />
+
 
 <Container>
 
