--- a/content/Jai/index.mdx
+++ b/content/Jai/index.mdx
@@ -12,13 +12,13 @@ import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
 # Jai's page B)
 
-Using [IIIF Presentation Collection(s)](https://iiif.io/api/presentation/3.0/#overview-collection) as a data source, Canopy IIIF (Canopy) generates a scholarly digital projects platform that transforms provided digital collections into an accessible, discoverable research environment. Built on modern web standards and leveraging the interoperability of IIIF, Canopy creates static sites that extend existing IIIF resources while providing advanced localized search capabilities, contextual navigation, and customizable presentation layers.
+# Loring Park Development - Lorning Minnesota
 
 <ButtonWrapper variant="interstitial" text="Have an idea for a project?">
   <Button href="/about/get-started" label="Get started" />
   <Button
-    href="https://canopy-iiif.github.io/app/docs/"
-    label="Read documentation"
+    href="https://stories.opengov.com/minneapolismn/published/AXQg-h_No"
+    label="Loring Park Implementation Today"
     variant="secondary"
   />
 </ButtonWrapper>
