Fix typo in Loring Park Development header

--- a/content/Jai/index.mdx
+++ b/content/Jai/index.mdx
@@ -12,14 +12,12 @@ import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
 # Jai's page B)
 
-# Loring Park Development - Lorning Minnesota
+# Loring Park Development - Loring Minnesota
 
-<ButtonWrapper variant="interstitial" text="Have an idea for a project?">
-  <Button href="/about/get-started" label="Get started" />
+<ButtonWrapper variant="interstitial" text="What's happening in Loring Park today??">
   <Button
     href="https://stories.opengov.com/minneapolismn/published/AXQg-h_No"
     label="Loring Park Implementation Today"
-    variant="secondary"
   />
 </ButtonWrapper>
 
