--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -17,8 +17,11 @@ population in 1960 was 1968 (from EIS document)
 
 2020 population: 9,718 (source: Wikipedia)
 
+
 <Image
-  src="https://iiif.dc.library.northwestern.edu/iiif/3/ac3a5c6d-695a-4806-b7e0-9f22b5dab7ab/full/3000,/0/default.jpg"
+  src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Loring_Park._%28May_12%2C_2025%29.jpg"
+  alt="this is a test"
+  caption="Loring Park in 2025"
 />
 
 
