Revise description for Jai's page
Updated the description for Jai's page to focus on Canopy exploration.

--- a/content/Jai/index.mdx
+++ b/content/Jai/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Jai's page B)
-description: Canopy IIIF makes easy the creation of digital projects for libraries, archives, and museums. Created by Mat Jordan and Mark Baggett.
+description: Jai's subpage for Canopy exploration
 image: https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5/950,520,7100,4740/!1200,630/0/default.jpg
 referencedManifests:
   - https://api.dc.library.northwestern.edu/api/v2/works/4bdb5a22-6c7f-498d-8e6e-e49ea9bc4778?as=iiif
