--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -25,44 +25,23 @@ population in 1960 was 1968 (from EIS document)
 />
 
 
-<div className="my-10 max-w-2xl">
-  <style>{`
-    @keyframes grow {
-      from { width: 0%; }
-      to { width: var(--final-width); }
-    }
-    .animate-bar {
-      animation: grow 2s ease-out forwards;
-    }
-  `}</style>
+## Experimenting with a bar graph
 
-  <h3 className="text-2xl font-bold mb-6">Demographics</h3>
-
-  <div className="space-y-4">
-    {/* Bar 1 */}
-    <div className="relative h-10 bg-gray-200 rounded">
-      <div 
-        className="animate-bar h-full bg-blue-600 rounded" 
-        style={{ '--final-width': '85%', width: '0%' }}
-      ></div>
-      <span className="absolute inset-y-0 left-2 flex items-center text-sm font-bold text-white">
-        Category A (85%)
-      </span>
-    </div>
-
-    {/* Bar 2 */}
-    <div className="relative h-10 bg-gray-200 rounded">
-      <div 
-        className="animate-bar h-full bg-blue-600 rounded" 
-        style={{ '--final-width': '60%', width: '0%' }}
-      ></div>
-      <span className="absolute inset-y-0 left-2 flex items-center text-sm font-bold text-white">
-        Category B (60%)
-      </span>
-    </div>
+<div style={{ marginBottom: '20px' }}>
+  <strong>Category A (85%)</strong>
+  <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
+    <div style={{ width: '85%', backgroundColor: '#2563eb', height: '100%', borderRadius: '4px' }}></div>
   </div>
 </div>
 
+<div style={{ marginBottom: '20px' }}>
+  <strong>Category B (60%)</strong>
+  <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
+    <div style={{ width: '60%', backgroundColor: '#2563eb', height: '100%', borderRadius: '4px' }}></div>
+  </div>
+</div>
+
+## Experimenting with juxtapose
 <iframe frameborder="0" class="juxtapose" width="100%" height="null" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=d4989f5e-fd4f-11f0-ba1b-0e6f42328d7d"></iframe>
 
 
