Revise page title and update content for Loring 100
Updated the title and content of the page to reflect the Loring 100 Apartments and added a button for current information.

--- a/content/Jai/index.mdx
+++ b/content/Jai/index.mdx
@@ -10,11 +10,14 @@ referencedManifests:
 
 import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
-# Jai's page B)
+# Loring 100 Apartments: Loring Park District
+### Minneapolis, Minnesota
 
-# Loring Park Development - Loring Minnesota
+Text explaining purpose: When? Why were the apartments were being built? Proponents, opponents? What ultimately happened?
 
-<ButtonWrapper variant="interstitial" text="What's happening in Loring Park today??">
+
+
+<ButtonWrapper variant="interstitial" text="What's happening in Loring Park today?">
   <Button
     href="https://stories.opengov.com/minneapolismn/published/AXQg-h_No"
     label="Loring Park Implementation Today"
