--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -1,3 +1,7 @@
+---
+title: Loring Park Neighborhood
+---
+
 <Interstitials.Hero
   headline="Plan your visit"
   description="Preview your favorites, bookmark upcoming tours, and read the latest from the archives."
