--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -94,13 +94,13 @@ population in 1960 was 1968 (from EIS document)
 <Timeline
   title="Empire and Control in Colonial India"
   description="This is a test!"
-  range={{start: "1970", end: "1974", granularity: "year"}}
+  range={{start: "1971", end: "1974", granularity: "year"}}
   threshold={5}
   steps={50}
   height="600px"
 >
   <TimelinePoint
-    date="1970"
+    date="1971"
     title="Legislation for Development District"
     summary="On June 3, 1971, the Minnesota State Legislature enacted legislation enabling the establishment of the Loring Park Development District. The act authorized the City of Minneapolis to carry out, through specified districts, redevelopment activities to be funded by the tax increment method."
   />
@@ -110,9 +110,9 @@ population in 1960 was 1968 (from EIS document)
     summary="By late 1973, the Loring Park Development Urban Design Plan had been developed and published by M. Paul Friedberg and Associates, and Barton-Aschman Associates, Inc. This comprehensive plan has been used by the City Council in its continuing implementation of the project."
   />
   <TimelinePoint
-    date="1857"
-    title="Great Mutiny"
-    summary="On July 29, 1974, Mr. Robert Purcell, Director of Loring Park Development, filed Loring Park Development, an Environmental Assessment with the Minnesota Environmental Quality Council (MEQC)."
+    date="1974"
+    title="This is a test"
+    summary="Test!"
   />
 </Timeline>
 
