--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -87,7 +87,14 @@ population in 1960 was 1968 (from EIS document)
 </div>
 
 ## Experimenting with juxtapose
-<iframe frameborder="0" class="juxtapose" width="100%" height="null" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=d4989f5e-fd4f-11f0-ba1b-0e6f42328d7d"></iframe>
+
+<iframe 
+  frameBorder="0" 
+  className="juxtapose" 
+  width="100%" 
+  height="360" 
+  src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=f17863b2-fd53-11f0-ba1b-0e6f42328d7d"
+></iframe>
 
 ## Experimenting with timeline
 
