--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -11,6 +11,8 @@ title: Loring Park Neighborhood
 
 <Container>
 
+## This website subsection is for visualization of EIS documents data
+
 ## Demographics 
 
 population in 1970 (incl. areas not subject to redevelopment) was 1387 (from EIS document)
