--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -88,6 +88,47 @@ population in 1960 was 1968 (from EIS document)
   <p className="text-xs text-gray-500 italic mt-4">Source: EIS Document & Wikipedia</p>
 </div>
 
+## experimenting with bar graph round 3 
+
+<div style={{ maxWidth: '600px', margin: '40px 0', fontFamily: 'sans-serif' }}>
+  <h3 style={{ fontSize: '1.25rem', fontWeight: 'bold', marginBottom: '24px' }}>Loring Park Demographic Shifts</h3>
+
+  {/* Item 1 */}
+  <div style={{ marginBottom: '20px' }}>
+    <div style={{ display: 'flex', justifyContent: 'space-between', marginBottom: '8px', fontSize: '14px' }}>
+      <span>1960 Population (1,968)</span>
+      <span style={{ fontWeight: 'bold', color: '#2563eb' }}>20%</span>
+    </div>
+    <div style={{ width: '100%', backgroundColor: '#f1f5f9', height: '12px', borderRadius: '10px' }}>
+      <div style={{ width: '20%', backgroundColor: '#3b82f6', height: '100%', borderRadius: '10px' }}></div>
+    </div>
+  </div>
+
+  {/* Item 2 */}
+  <div style={{ marginBottom: '20px' }}>
+    <div style={{ display: 'flex', justifyContent: 'space-between', marginBottom: '8px', fontSize: '14px' }}>
+      <span>Redevelopable Portion (1,000)</span>
+      <span style={{ fontWeight: 'bold', color: '#4f46e5' }}>10%</span>
+    </div>
+    <div style={{ width: '100%', backgroundColor: '#f1f5f9', height: '12px', borderRadius: '10px' }}>
+      <div style={{ width: '10%', backgroundColor: '#6366f1', height: '100%', borderRadius: '10px' }}></div>
+    </div>
+  </div>
+
+  {/* Item 3 */}
+  <div style={{ marginBottom: '20px' }}>
+    <div style={{ display: 'flex', justifyContent: 'space-between', marginBottom: '8px', fontSize: '14px' }}>
+      <span>2020 Population (9,718)</span>
+      <span style={{ fontWeight: 'bold', color: '#059669' }}>100%</span>
+    </div>
+    <div style={{ width: '100%', backgroundColor: '#f1f5f9', height: '12px', borderRadius: '10px' }}>
+      <div style={{ width: '100%', backgroundColor: '#10b981', height: '100%', borderRadius: '10px' }}></div>
+    </div>
+  </div>
+
+  <p style={{ fontSize: '12px', color: '#64748b', fontStyle: 'italic', marginTop: '16px' }}>Source: EIS Document & Wikipedia</p>
+</div>
+
 ## Experimenting with juxtapose
 
 <iframe 
