--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -11,7 +11,7 @@ title: Loring Park Neighborhood
 
 <Container>
 
-## This website subsection is for visualization of EIS documents data
+## This subpage is a bunch of experimentations for visualization of EIS documents data
 
 ## Demographics 
 
