--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -142,7 +142,7 @@ population in 1960 was 1968 (from EIS document)
 ## Experimenting with timeline
 
 <Timeline
-  title="Empire and Control in Colonial India"
+  title="Loring Park Development District History: 1970s"
   description="This is a test!"
   range={{start: "1971", end: "1974", granularity: "year"}}
   threshold={5}
