Add width to iframe in index.mdx
Added width attribute to iframe for better responsiveness.

--- a/content/Jai/index.mdx
+++ b/content/Jai/index.mdx
@@ -15,7 +15,7 @@ import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
 
 Text explaining purpose: When? Why were the apartments were being built? Proponents, opponents? What ultimately happened?
 
-<iframe src="https://api.dc.library.northwestern.edu/api/v2/works/2b36982f-0ab3-43ef-a590-c2144b815bf9?as=iiif" title="EIS for the Loring 100 Apartments"></iframe>
+<iframe src="https://api.dc.library.northwestern.edu/api/v2/works/2b36982f-0ab3-43ef-a590-c2144b815bf9?as=iiif" title="EIS for the Loring 100 Apartments" width="100%"></iframe>
 
 <ButtonWrapper variant="interstitial" text="What's happening in Loring Park today?">
   <Button
