--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -139,6 +139,10 @@ population in 1960 was 1968 (from EIS document)
   src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=f17863b2-fd53-11f0-ba1b-0e6f42328d7d"
 ></iframe>
 
+</Container>
+
+<Container className="max-w-screen-xl">
+
 ## Experimenting with timeline
 
 <Timeline
